Fixed layout problem

--- a/js/src/sass/App.sass
+++ b/js/src/sass/App.sass
@@ -6,11 +6,5 @@ body
   background-color: rgb(102, 204, 255)
 
 .App
-  display: -webkit-flex
-  display: flex
-  -webkit-flex-direction: row
-  flex-direction: row
-  -webkit-align-items: flex-start
-  align-items: flex-start
   height: 100vh
   width: 100vw
