--- a/js/src/sass/Sidebar.sass
+++ b/js/src/sass/Sidebar.sass
@@ -1,8 +1,6 @@
 @import variables
 
 .aside
-  //-webkit-order: 1
-  //order: 1
   width: 25vw
   height: 100vh
   flex: 1
@@ -51,7 +49,7 @@
   .nav
     li 
       height: 6vh
-      width: 8vw
+      width: 15vh
       margin: 1vh
       background-color: rgb(241, 241, 241) //#f9f9f9
       -webkit-filter: drop-shadow( 6px 0 2px hsla(0, 0%, 0%, 0.2))
@@ -76,7 +74,7 @@
       &:hover
         z-index: 3
         height: 8vh
-        width: 9vw
+        width: 18vh
         background-color: #f9f9f9
 
 //Nav animation drop down
